--- a/Map_Geofencing/HeaderView.xib
+++ b/Map_Geofencing/HeaderView.xib
@@ -16,19 +16,18 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0If-TA-p4K">
-                    <rect key="frame" x="16" y="8" width="50.5" height="24"/>
-                    <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
-                    <nil key="textColor"/>
+                    <rect key="frame" x="16" y="8.5" width="34.5" height="23.5"/>
+                    <fontDescription key="fontDescription" name="AvenirNextCondensed-DemiBold" family="Avenir Next Condensed" pointSize="17"/>
+                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="▽" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Bkk-uX-H2B">
                     <rect key="frame" x="341" y="9.5" width="18" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <nil key="textColor"/>
+                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="0.80000000000000004" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="0If-TA-p4K" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="RQR-Yb-0JW"/>
                 <constraint firstItem="0If-TA-p4K" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="VYN-MJ-Ox8"/>
@@ -40,6 +39,7 @@
                 <outlet property="arrowLabel" destination="Bkk-uX-H2B" id="zOA-5e-1vW"/>
                 <outlet property="titleLabel" destination="0If-TA-p4K" id="gsJ-y0-ChR"/>
             </connections>
+            <point key="canvasLocation" x="35.5" y="131"/>
         </view>
     </objects>
 </document>
