--- a/Map_Geofencing/PlantNameTableViewCell.xib
+++ b/Map_Geofencing/PlantNameTableViewCell.xib
@@ -11,7 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PlantNameTableViewCell" rowHeight="60" id="KGk-i7-Jjw" customClass="PlantNameTableViewCell" customModule="Map_Geofencing" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="60" id="KGk-i7-Jjw" customClass="PlantNameTableViewCell" customModule="Map_Geofencing" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -19,16 +19,16 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="ydp-md-lde">
-                        <rect key="frame" x="8" y="8" width="304" height="44"/>
+                        <rect key="frame" x="16" y="8" width="288" height="44"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" text="Scientific Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PdC-8j-yRL">
-                                <rect key="frame" x="0.0" y="0.0" width="304" height="20.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="288" height="20.5"/>
                                 <fontDescription key="fontDescription" name="AvenirNextCondensed-Bold" family="Avenir Next Condensed" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Common Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fuA-Gc-3mQ">
-                                <rect key="frame" x="0.0" y="20.5" width="304" height="23.5"/>
+                                <rect key="frame" x="0.0" y="20.5" width="288" height="23.5"/>
                                 <fontDescription key="fontDescription" name="AvenirNextCondensed-Regular" family="Avenir Next Condensed" pointSize="17"/>
                                 <color key="textColor" white="0.5" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
@@ -37,9 +37,9 @@
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="ydp-md-lde" secondAttribute="trailing" constant="8" id="3gk-YW-W7i"/>
+                    <constraint firstAttribute="trailing" secondItem="ydp-md-lde" secondAttribute="trailing" constant="16" id="3gk-YW-W7i"/>
                     <constraint firstItem="ydp-md-lde" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="3uQ-Vi-eF8"/>
-                    <constraint firstItem="ydp-md-lde" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="K5G-Cb-uvn"/>
+                    <constraint firstItem="ydp-md-lde" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="K5G-Cb-uvn"/>
                     <constraint firstAttribute="bottom" secondItem="ydp-md-lde" secondAttribute="bottom" constant="8" id="sop-ZA-cEw"/>
                 </constraints>
             </tableViewCellContentView>
