Cache image for next time and add image to core data for detail view images

--- a/Map_Geofencing/PlantPhotosTableViewCell.xib
+++ b/Map_Geofencing/PlantPhotosTableViewCell.xib
@@ -19,7 +19,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="375" height="249.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="sample" translatesAutoresizingMaskIntoConstraints="NO" id="3Yp-fB-DlG">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3Yp-fB-DlG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
                     </imageView>
                     <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="n1M-5B-nOO">
@@ -42,7 +42,4 @@
             <point key="canvasLocation" x="34.5" y="93"/>
         </tableViewCell>
     </objects>
-    <resources>
-        <image name="sample" width="650" height="574"/>
-    </resources>
 </document>
