--- a/Map_Geofencing/PlantPhotosTableViewCell.xib
+++ b/Map_Geofencing/PlantPhotosTableViewCell.xib
@@ -12,14 +12,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="250" id="KGk-i7-Jjw" customClass="PlantPhotosTableViewCell" customModule="Map_Geofencing" customModuleProvider="target">
+        <tableViewCell clipsSubviews="YES" contentMode="scaleAspectFit" selectionStyle="default" indentationWidth="10" rowHeight="250" id="KGk-i7-Jjw" customClass="PlantPhotosTableViewCell" customModule="Map_Geofencing" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="249.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3Yp-fB-DlG">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3Yp-fB-DlG">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="250"/>
                     </imageView>
                     <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="n1M-5B-nOO">
@@ -27,10 +27,10 @@
                     </pageControl>
                 </subviews>
                 <constraints>
+                    <constraint firstAttribute="bottom" secondItem="3Yp-fB-DlG" secondAttribute="bottom" id="2GN-85-UvA"/>
                     <constraint firstItem="n1M-5B-nOO" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="7hC-oi-Cf0"/>
+                    <constraint firstAttribute="trailing" secondItem="3Yp-fB-DlG" secondAttribute="trailing" id="JIl-Rb-w1I"/>
                     <constraint firstItem="3Yp-fB-DlG" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Ty0-jL-NKl"/>
-                    <constraint firstItem="3Yp-fB-DlG" firstAttribute="centerX" secondItem="n1M-5B-nOO" secondAttribute="centerX" id="ZPo-xh-x6Q"/>
-                    <constraint firstItem="3Yp-fB-DlG" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="bFp-Qj-3Uu"/>
                     <constraint firstAttribute="bottomMargin" secondItem="n1M-5B-nOO" secondAttribute="bottom" constant="-8" id="cUY-5a-bkU"/>
                     <constraint firstItem="3Yp-fB-DlG" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="hhn-18-q8N"/>
                 </constraints>
