--- a/Map_Geofencing/Assets/Base.lproj/Main.storyboard
+++ b/Map_Geofencing/Assets/Base.lproj/Main.storyboard
@@ -60,8 +60,13 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="jum-NW-54t">
+                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="cZ8-O9-g27">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="108" width="375" height="559"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="plantCell" rowHeight="60" id="ZcG-l0-47a" customClass="PlantTableViewCell" customModule="Map_Geofencing" customModuleProvider="target">
@@ -134,7 +139,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="cZ8-O9-g27" firstAttribute="top" secondItem="alF-e6-mfE" secondAttribute="top" id="2Aw-1D-PuI"/>
+                            <constraint firstItem="cZ8-O9-g27" firstAttribute="top" secondItem="alF-e6-mfE" secondAttribute="top" constant="108" id="2Aw-1D-PuI"/>
                             <constraint firstItem="BU1-kV-f69" firstAttribute="top" secondItem="cZ8-O9-g27" secondAttribute="bottom" id="RVf-lE-X89"/>
                             <constraint firstItem="cZ8-O9-g27" firstAttribute="leading" secondItem="alF-e6-mfE" secondAttribute="leading" id="SXu-IM-JyG"/>
                             <constraint firstAttribute="trailing" secondItem="cZ8-O9-g27" secondAttribute="trailing" id="iys-QY-dTL"/>
@@ -142,7 +147,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Plant List" id="WYh-CO-5CR"/>
                     <connections>
-                        <outlet property="searchDisplayController" destination="lCV-3t-Ib2" id="QPS-N2-nsW"/>
+                        <outlet property="searchDisplayController" destination="rlG-Kt-nDi" id="SGH-gn-oRv"/>
                         <outlet property="tableView" destination="cZ8-O9-g27" id="4Ng-27-Mi2"/>
                     </connections>
                 </viewController>
@@ -155,8 +160,16 @@
                         <outlet property="searchResultsDelegate" destination="3P8-di-6yy" id="MLY-Aa-piH"/>
                     </connections>
                 </searchDisplayController>
+                <searchDisplayController id="rlG-Kt-nDi">
+                    <connections>
+                        <outlet property="delegate" destination="3P8-di-6yy" id="zee-BC-Tp8"/>
+                        <outlet property="searchContentsController" destination="3P8-di-6yy" id="sBH-Wl-qak"/>
+                        <outlet property="searchResultsDataSource" destination="3P8-di-6yy" id="GQ7-CV-2la"/>
+                        <outlet property="searchResultsDelegate" destination="3P8-di-6yy" id="jdf-8p-hNX"/>
+                    </connections>
+                </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="833" y="911"/>
+            <point key="canvasLocation" x="832.79999999999995" y="909.89505247376314"/>
         </scene>
         <!--Favorites-->
         <scene sceneID="BO7-uI-UWX">
